# structree

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
examples/: input
src/: config.cpp  config.h  main.cpp  structree.cpp  structree.h
